# anima-forge

./: .claudeignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  hatch_build.py  install.ps1  install.sh  pyproject.toml
.github/: dependency-audit-allowlist.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yaml  release.yml
assets/: hero.html
benchmarks/: .gitkeep
configs/: forge_cuda.yaml  forge_medium.yaml  forge_micro.yaml  forge_nano.yaml  forge_nano_flagship.yaml  forge_small.yaml
configs/eval/: forge_student.yaml  libero_forge.yaml  libero_smoke_test.yaml  simpler_forge.yaml  vlabench_forge.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  DEPLOYMENT.md  EVALUATION.md  HYPERPARAMETER_GUIDE.md  PIPELINE.md  PROFILER.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  public_claims.json
hf_upload/: README.md  benchmark_summary.json
marketing/: README.md
marketing/release/: README.md  launch_manifest.json  release_notes.md  social_copy.md
models/: README.md
scripts/: build_release_kit.py  check_dependency_audit.py  check_docs.py  check_public_snapshot.py  compress_and_push.py  generate_cli_reference.py  gpu_fit_profiler.py  manual_e2e_tier_matrix.sh  run_full_gate_matrix.sh  run_vla_eval.sh  update_vla_eval.sh  validate_matrix_profiles.py  verify_installed_runtime.py  verify_teachers.py  verify_testpypi_artifact.py
src/forge/: __init__.py  _build_info.py  auto_hyperparam.py  autosense.py  backend.py  checkpoint_compat.py  cli.py  cli_v2.py  cli_v2_root.py  config.py  cross_embodiment.py  curriculum.py  distill.py  errors.py  finetune.py  gpu_utils.py  hf_compat.py  hub_package.py  hyperparam.py  json_artifacts.py  json_utils.py  losses.py  metrics.py  model_assets.py  model_registry.py  multi_teacher.py  openvla_loader.py  pipeline.py  processor_compat.py  provenance.py  prune.py  prune_v2.py  quantize_v2.py  report.py  serve.py  student.py  teacher.py  teacher_fleet.py  telemetry.py  trainer.py  (+7 more)
src/forge/benchmark/: __init__.py  artifacts.py  comparison.py  execution.py  matrix.py  metrics.py  runner.py  suite_runner.py
src/forge/cli_commands/: __init__.py  _doctor_core.py  benchmark.py  config_cli.py  curriculum.py  demo.py  doctor.py  embodiment.py  eval.py  fetch.py  finetune.py  hyperparam.py  json_output.py  logging_config.py  metrics.py  models.py  profile.py  quantize.py  quickstart.py  shared.py  students.py  teacher.py  telemetry.py  top.py  train.py  train_v3.py  transfer.py  universal_distill.py
src/forge/configs/: forge_nano.yaml
src/forge/data/: __init__.py  label_writer.py  lerobot_video_dataset.py  real_robot_episodes.py  teacher_dataset.py
src/forge/demo/: __init__.py  pipeline.py  report.py  runner.py
src/forge/embodiments/: __init__.py  profiles.py  registry.py
src/forge/eval/: __init__.py  model_server.py  results.py  runner.py
src/forge/export/: __init__.py  mlx_export.py  onnx_artifacts.py  onnx_export.py  tensorrt_export.py
src/forge/modules/: __init__.py  action_chunking.py  action_head_factory.py  bridge_attention.py  consistency_head.py  diffusion_head.py  flow_head.py  lora.py
src/forge/profiler/: __init__.py  dataclasses.py  flops.py  markdown.py  profiler.py  recommend.py  vram.py
src/forge/quantize/: __init__.py  api.py  chunk_aware.py  profile.py  qvla.py  serialization.py
tests/: conftest.py  test_checkpoint_compat.py  test_cli_error_boundaries.py  test_dependency_audit.py  test_deployment.py  test_distillation.py  test_doctor.py  test_doctor_hardening.py  test_export.py  test_foundation.py  test_gpu_utils.py  test_hf_compat.py  test_indexed_cuda_runtime.py  test_install_script.py  test_mlx_turboquant.py  test_model_fetch.py  test_onnx_artifacts.py  test_openvla_loader.py  test_pipeline.py  test_pipeline_summary_atomicity.py  test_processor_compat.py  test_pruning.py  test_public_snapshot.py  test_quantization.py  test_quantized_serialization.py  test_real_models.py  test_release_gates.py  test_release_kit.py  test_script_path_portability.py  test_serve_endpoints.py  test_serve_language.py  test_student.py  test_student_language_text.py  test_teacher.py  test_testpypi_artifact.py  test_transformers_compat.py  test_turboquant.py  test_v2_action_chunking.py  test_v2_auto_hyperparam.py  test_v2_autosense.py  (+61 more)
tests/integration/: __init__.py  test_real_models.py  test_v2_pipeline.py
(+47 files in other folders)
