[project]
name = "anima-forge"
dynamic = ["version"]
description = "Provenance-enforced VLA teacher labeling, student distillation, compression, export, and evaluation for edge robotics."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.13"
authors = [
    { name = "ilessio", email = "ilessio@aiflowlabs.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]

keywords = ["robotics", "vla", "distillation", "edge-ai", "mlx", "tensorrt"]

dependencies = [
    "torch>=2.10,<2.11",
    "transformers>=5.0,<6",
    "safetensors>=0.7,<1",
    "peft>=0.18,<1",
    "accelerate>=1.13,<2",
    "datasets>=4.8,<5",
    "h5py>=3.16,<4",
    "numpy>=2.2,<2.3",
    "pyyaml>=6.0,<7",
    "rich>=14.3,<15",
    # The generated public CLI reference is validated against this Typer/Click
    # minor line in both locked source and clean wheel environments.
    "typer>=0.26.8,<0.27",
    "einops>=0.8,<1",
    "scipy>=1.17,<2",
    "pillow>=12.3,<13",
    "tqdm>=4.67,<5",
    "onnx>=1.22,<2",
    "onnxruntime-gpu>=1.24,<1.27; platform_machine == 'x86_64' and platform_system != 'Darwin'",
    "onnxruntime>=1.24,<1.27; platform_machine != 'x86_64' or platform_system == 'Darwin'",
    "onnxscript>=0.6,<1",
    "fastapi>=0.139,<1",
    "timm>=1.0,<2",
    "uvicorn>=0.42,<1",
    "python-multipart>=0.0.31,<1",
    "torchvision>=0.25,<0.26",
    "huggingface-hub>=1.7,<2",
    "optuna>=4.8,<5",
    "optimum>=2.1,<3",
    "lerobot[molmoact2,smolvla,vla_jepa]>=0.6,<0.7",
    "av>=15,<16",
    "websockets>=16,<17",
    "msgpack>=1.2.1,<2",
    "wandb>=0.25,<1",
    "bitsandbytes>=0.49,<1; platform_system == 'Linux'",
    "tensorrt==10.16.0.72; platform_system == 'Linux'",
    "mlx>=0.16.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.18.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "coremltools>=7.2; platform_system == 'Darwin'",
    # Security floors for required transitive runtime packages. Keep these in
    # wheel metadata so non-lockfile installs cannot resolve known-vulnerable builds.
    "aiohttp>=3.14,<4",
    "click>=8.4.2,<8.5",
    "gitpython>=3.1.50,<4",
    "idna>=3.15,<4",
    "mako>=1.3.12,<2",
    "pygments>=2.20,<3",
    "requests>=2.33,<3",
    "starlette>=1.3.1,<2",
    "urllib3>=2.7,<3",
]

[project.urls]
Homepage = "https://github.com/RobotFlow-Labs/anima-forge"
Repository = "https://github.com/RobotFlow-Labs/anima-forge"
Issues = "https://github.com/RobotFlow-Labs/anima-forge/issues"

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-timeout>=2.4,<3",
    "pytest-cov>=7,<8",
    "ruff>=0.15,<1",
    "mypy>=1.19,<2",
    "types-pyyaml>=6.0,<7",
]

[project.scripts]
forge = "forge.cli_v2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/forge",
    "hatch_build.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "COMPATIBILITY.md",
    "CITATION.cff",
]

[tool.hatch.build.hooks.custom]

[tool.hatch.version]
path = "src/forge/__init__.py"

[tool.hatch.build]
exclude = [
    "/.claude",
    "/.backup_bk",
    "/benchmarks",
    "/marketing",
    "/models",
    "/outputs",
    "/tests",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]
extend-exclude = ["src/forge/vendor/rdt2"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Uppercase symbols and ``torch.nn.functional as F`` are standard tensor-math
# notation throughout the model kernels; retain all other naming checks.
ignore = ["N802", "N803", "N806", "N812"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
addopts = "-v --tb=short"
filterwarnings = [
    "error::DeprecationWarning:forge.*",
]
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_return_any = false
warn_unused_configs = true
exclude = ["^src/forge/vendor/rdt2/"]

[[tool.mypy.overrides]]
module = "forge.vendor.rdt2.*"
ignore_errors = true
